--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -1,5 +1,48 @@
-.formularioRegistro{
+
+.form{
+    width: 80%;
+    margin: auto;
+    background-color: white;
+    margin-top: 10%;
+    padding: 2%;
+}
+
+.Registrar{
     padding-left: 30%;
     padding-right: 30%;
     margin-top: 10%;
+    /*display: none;*/
+    background-color: white;
+}
+
+.modal-content{
+    width: 50%;
+    margin: auto;
+}
+
+div#nuevo{
+    padding-bottom: 5%;
+}
+
+.ng-valid[required], .ng-valid.required  {
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    border-left: 10px solid rgb(218, 200, 43); /* yellow */
+}
+
+.ng-invalid:not(form)  {
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    border-left: 10px solid #e94646; /* red */
+}
+
+.backdrop {
+    background-color:rgba(0,0,0,0.6);
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100vh;
 }
