--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,38 +1,51 @@
-<div class="formularioRegistro">
-  <h2>Crear Usuario</h2>
-  <form [formGroup]="usuarioForm" (ngSubmit)="guardar()">
-    <div class="form-group">
-      <label>Nombre</label>
-      <input type="text" formControlName="nombre" class="form-control">
-    </div>
-    <div class="form-group">
-      <label>Rol</label>
-      <select name="rol" id="rol" formControlName="rol" class="form-control">
-        <option [ngValue]="item" *ngFor="let item of roles">{{item.nombre}}</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label>Estado</label>
-      <div class="form-check">
-        <input class="form-check-input" formControlName="activo" type="radio" name="activo" value="1" id="activo">
-        <label class="form-check-label" for="activo">
-          Activo
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" formControlName="activo" type="radio" name="activo" value="0" id="inactivo">
-        <label class="form-check-label" for="inactivo">
-        Inactivo
-        </label>
-      </div>
-    </div>
 
-    <button type="submit" class="btn btn-primary" [disabled]="usuarioForm.invalid">Guardar</button>
+<div class="form">
+<div id="nuevo">
+  <button type="button" class="btn btn-dark" (click)="openPop(0)">NUEVO USUARIO</button>
+</div>
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
+  <div class="modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" aria-label="Close" (click)="closePop()"><span
+                  aria-hidden="true">&times;</span></button>
+    </div>
+    <div class="modal-body">
+      <h3>{{titlepop}}</h3>
+      <br>
+      <form [formGroup]="usuarioForm" (ngSubmit)="guardar()">
+        <div class="form-group">
+          <label>Nombre:</label>
+          <input type="text" formControlName="nombre" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Rol:</label>
+          <select name="rol" id="rol" formControlName="rol" class="form-control">
+            <option [ngValue]="item" *ngFor="let item of roles">{{item.nombre}}</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Estado:</label>
+          <div class="form-check">
+            <input class="form-check-input" formControlName="activo" type="radio" name="activo" value="Activo" id="activo">
+            <label class="form-check-label" for="activo">
+              Activo
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" formControlName="activo" type="radio" name="activo" value="Inactivo" id="inactivo">
+            <label class="form-check-label" for="inactivo">
+            Inactivo
+            </label>
+          </div>
+        </div>
 
-  </form>
+        <button type="submit" class="btn btn-primary" [disabled]="usuarioForm.invalid">{{btn}}</button>
+      </form>
+    </div>
+  </div>
 </div>
 
-<div class="formularioRegistro">
+<div class="Registros">
 <h2>Usuarios Registrados</h2>
   <table class="table">
     <thead>
@@ -47,23 +60,14 @@
       <tr *ngFor="let item of usuarios">
         <th>{{item.nombre}}</th>
         <td>{{item.rol.nombre}}</td>
-        <td>{{item.estado}}</td>
+        <td>{{item.activo}}</td>
         <td>
-          <button type="button" class="btn btn-success">Editar</button>
+          <button type="button" class="btn btn-success" (click)="openPop(item)">Editar</button>
           <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
-
-
-
-
-
-
-
-
-
-
+</div>
 <router-outlet></router-outlet>
